# OCCTSandbox

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello.cpp  hello.h.in
goodbye/: CMakeLists.txt  goodbye.h  main.cpp
tools/: configure.sh  run.sh
